@@ -95,7 +95,8 @@ sub _maybe_extract_line_number {
 
     # git-grep (don't match on ::)
     # lib/Open/This.pm:17
-    if ( $$text =~ s{(\w):(\d+)\b}{$1} ) {
+    # Github links: foo/bar.go#L100
+    if ( $$text =~ s{(\w)[#:](\d+)\b}{$1} ) {
         return $2;
     }
 
@@ -175,6 +176,10 @@ this case.)
 Copy/pasting a C<git-grep> result.
 
     ot lib/Foo/Bar.pm:99 # vim +99 Foo/Bar.pm
+
+Copy/pasting a partial GitHub URL.
+
+    ot lib/Foo/Bar.pm#100 # vim +100 Foo/Bar.pm
 
 =head1 FUNCTIONS
 
